# support-bot

./: .dockerignore  .gitignore  .replit  CHANGELOG.md  DOCKER_README.md  Dockerfile  README.md  __init__.py  commands.json  discord_bot.py  discord_modals.py  discord_views.py  keep_alive.py  pyproject.toml  requirements-dev.txt  requirements.txt  retroarcher_bot.py  sample.env
.github/workflows/: CI.yml  ci-docker.yml  ci.yml  publish_docker.yml
src/: __main__.py  common.py  discord_avatar.py  discord_bot.py  discord_constants.py  discord_helpers.py  main.py  reddit_bot.py
src/common/: common.py  crypto.py  database.py  globals.py  inspector.py  logging_config.py  rank.py  rank_database.py  sponsors.py  time.py  version.py  webapp.py
src/discord/: bot.py  helpers.py  tasks.py  views.py
src/discord/cogs/: base_commands.py  fun_commands.py  github_commands.py  moderator_commands.py  support_commands.py
src/discord_bot/: bot.py  cogs_common.py  helpers.py  tasks.py  views.py
src/discord_bot/cogs/: autoban.py  base_commands.py  fun_commands.py  github_commands.py  moderator_commands.py  rank.py  support_commands.py
src/reddit/: auth.py  bot.py
src/reddit_bot/: bot.py
src/reddit_bot/cogs/: rank.py
tests/: conftest.py
tests/fixtures/cassettes/: fixture__submission.json  fixture_slash_command_comment.json  test_comment_loop.json  test_process_comment.json  test_process_submission.json  test_submission.json  test_submission_loop.json
tests/fixtures/certs/expired/: cert.pem  key.pem
tests/unit/common/: test_common.py  test_crypto.py  test_database.py  test_inspector.py  test_logging_config.py  test_rank.py  test_rank_database.py  test_sponsors.py  test_time.py  test_webapp.py
tests/unit/discord/: test_base_commands.py  test_command_helpers.py  test_discord_bot.py  test_rank_cog.py  test_tasks.py  test_views.py
tests/unit/reddit/: conftest.py  test_reddit_bot.py
