[tool.poetry]
name = "lizardbyte-discord-bot"
version = "0.1.0"
description = "Bot for LizardByte discord server"
authors = ["ReenigneArcher"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "2.1.1"
Flask = "2.2.2"
igdb-api-v4 = "0.0.5"
python-dotenv = "0.20.0"
requests = "2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
