[tool.poetry]
name = "lizardbyte-discord-bot"
version = "0.1.0"
description = "Bot for LizardByte discord server"
authors = ["ReenigneArcher"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "2.0.1"
Flask = "2.2.3"
igdb-api-v4 = "0.1.0"
python-dotenv = "0.21.1"
requests = "2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
