[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-bot"
dynamic = ["version"]
description = "Support bot written in python to help manage LizardByte communities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "LizardByte", email = "lizardbyte@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cryptography==46.0.5",
    "Flask==3.1.2",
    "GitPython==3.1.46",
    "libgravatar==1.0.4",
    "mistletoe==1.5.1",
    "praw==7.8.1",
    "py-cord==2.7.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "tinydb==4.8.2",
]

[project.optional-dependencies]
dev = [
    "betamax==0.9.0",
    "betamax-serializers==0.2.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
]

[project.urls]
Homepage = "https://github.com/LizardByte/support-bot"
Repository = "https://github.com/LizardByte/support-bot"
Issues = "https://github.com/LizardByte/support-bot/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.common.version.__version__"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-rxXs",
    "--tb=native",
    "--verbose",
    "--color=yes",
    "--cov=src",
    "--cov-report=term-missing",
    "--junitxml=junit.xml",
    "-o", "junit_family=legacy",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
